--- a/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
@@ -40,27 +40,6 @@
             </fieldset>
         </div>
 
-        <div class="adminpanel bundle">
-            <fieldset class="groupbox" id="grpbundle">
-                <legend>Bundle e Form</legend>
-                <div>
-                    <button id="adminpanelgeneratebundle" class="active btn btn-default" data-reactid=".3.0" type="button">Genera bundle</button>
-                    <br/><br/>
-                    <div class="inputbox">
-                        <label for='bundlename'>Nome Bundle:</label>
-                        <input class="form-control" type="text" id="bundlename" value="Fi/DemoBundle"/><br/>
-                    </div>
-                </div>
-                <div>
-                    <button id="adminpanelgenerateformcrud" class="active btn btn-default" data-reactid=".3.0" type="button">Genera CRUD per il form</button>
-                    <!--<button id="adminpanelgenerateform" class="active btn btn-default" data-reactid=".3.0" type="button">Genera form</button>-->
-                    <br/><br/>
-                    <label for='entityform'>Entità:</label>
-                    <input class="form-control" type="text" id="entityform" value="ffprincipale"/><br/>
-                </div>
-            </fieldset>
-        </div>
-
         <div class="adminpanel entity">
             <fieldset class="groupbox" id="grpentities">
                 <legend title="{{database_host}} {{database_name}} ({{database_driver}})">Database</legend>
@@ -74,13 +53,6 @@
                             {% endfor %}
                         </select>
                         <br/>
-                        <label for='entitybundle'>Bundle:</label><br/>
-                        <select class="form-control" id="entitybundle">
-                            {% for bundle in bundles %}
-                                <option value="{{bundle}}">{{bundle}}</option>
-                            {% endfor %}
-                        </select>
-                        <br/><br/>
                     </div>
                 </div>
                 <button id="adminpanelgenerateclassentity" class="active btn btn-primary" data-reactid=".3.0" type="button">Genera le classi dalle entities</button>
@@ -89,6 +61,27 @@
             </fieldset>
         </div>
     </div>
+
+    <div class="adminpanel bundle">
+        <fieldset class="groupbox" id="grpbundle">
+            <legend>Bundle e Form</legend>
+            <!--<div>
+                <button id="adminpanelgeneratebundle" class="active btn btn-default" data-reactid=".3.0" type="button">Genera bundle</button>
+                <br/><br/>
+                <div class="inputbox">
+                    <label for='bundlename'>Nome Bundle:</label>
+                    <input class="form-control" type="text" id="bundlename" value="Fi/DemoBundle"/><br/>
+                </div>
+            </div>-->
+            <div>
+                <button id="adminpanelgenerateformcrud" class="active btn btn-default" data-reactid=".3.0" type="button">Genera CRUD per il form</button>
+                <br/><br/>
+                <label for='entityform'>Entità:</label>
+                <input class="form-control" type="text" id="entityform" value="Ffprincipale"/><br/>
+            </div>
+        </fieldset>
+    </div>
+
     <div id="risultato"></div>
     {% block javascripts %}
         {%set userdir = rootdir | slice(0, rootdir|length - (appname|length) - 1)%}
@@ -253,16 +246,15 @@
                     });
                 });
                 $("#adminpanelgenerateentity").click(function () {
-                    var entitybundle = $("#entitybundle").val();
                     var entityfile = $("#entityfile").val();
-                    var domanda = "Vuoi creare le entità nel bundle: " + entitybundle + " partendo dal file: " + entityfile;
+                    var domanda = "Vuoi creare i fle di coonfigurazione per le entità partendo dal file: " + entityfile;
                     conferma(domanda).then(function (answer) {
                         if ((String(answer) == "true")) {
                             $("#risultato").hide();
                             $("#risultato").html("");
                             $.ajax({
                                 url: "{{ path("fi_pannello_amministrazione_generateentity") }}",
-                                data: {bundle: entitybundle, file: entityfile},
+                                data: {file: entityfile},
                                 context: document.body
                             }).done(function (data) {
                                 $("#risultato").html(data);
