--- a/tests/src/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/tests/src/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'FOSUserBundle' %}
-{% extends "::base.html.twig" %}
+{% extends "base.html.twig" %}
 {% block fos_user_content %}
     <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
