--- a/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
@@ -40,6 +40,27 @@
             </fieldset>
         </div>
 
+        <div class="adminpanel bundle">
+            <fieldset class="groupbox" id="grpbundle">
+                <legend>Bundle e Form</legend>
+                <div>
+                    <button id="adminpanelgeneratebundle" class="active btn btn-default" data-reactid=".3.0" type="button">Genera bundle</button>
+                    <br/><br/>
+                    <div class="inputbox">
+                        <label for='bundlename'>Nome Bundle:</label>
+                        <input class="form-control" type="text" id="bundlename" value="Fi/DemoBundle"/><br/>
+                    </div>
+                </div>
+                <div>
+                    <button id="adminpanelgenerateformcrud" class="active btn btn-default" data-reactid=".3.0" type="button">Genera CRUD per il form</button>
+                    <!--<button id="adminpanelgenerateform" class="active btn btn-default" data-reactid=".3.0" type="button">Genera form</button>-->
+                    <br/><br/>
+                    <label for='entityform'>Entità:</label>
+                    <input class="form-control" type="text" id="entityform" value="ffprincipale"/><br/>
+                </div>
+            </fieldset>
+        </div>
+
         <div class="adminpanel entity">
             <fieldset class="groupbox" id="grpentities">
                 <legend title="{{database_host}} {{database_name}} ({{database_driver}})">Database</legend>
@@ -53,6 +74,13 @@
                             {% endfor %}
                         </select>
                         <br/>
+                        <label for='entitybundle'>Bundle:</label><br/>
+                        <select class="form-control" id="entitybundle">
+                            {% for bundle in bundles %}
+                                <option value="{{bundle}}">{{bundle}}</option>
+                            {% endfor %}
+                        </select>
+                        <br/><br/>
                     </div>
                 </div>
                 <button id="adminpanelgenerateclassentity" class="active btn btn-primary" data-reactid=".3.0" type="button">Genera le classi dalle entities</button>
@@ -61,27 +89,6 @@
             </fieldset>
         </div>
     </div>
-
-    <div class="adminpanel bundle">
-        <fieldset class="groupbox" id="grpbundle">
-            <legend>Bundle e Form</legend>
-            <!--<div>
-                <button id="adminpanelgeneratebundle" class="active btn btn-default" data-reactid=".3.0" type="button">Genera bundle</button>
-                <br/><br/>
-                <div class="inputbox">
-                    <label for='bundlename'>Nome Bundle:</label>
-                    <input class="form-control" type="text" id="bundlename" value="Fi/DemoBundle"/><br/>
-                </div>
-            </div>-->
-            <div>
-                <button id="adminpanelgenerateformcrud" class="active btn btn-default" data-reactid=".3.0" type="button">Genera CRUD per il form</button>
-                <br/><br/>
-                <label for='entityform'>Entità:</label>
-                <input class="form-control" type="text" id="entityform" value="Ffprincipale"/><br/>
-            </div>
-        </fieldset>
-    </div>
-
     <div id="risultato"></div>
     {% block javascripts %}
         {%set userdir = rootdir | slice(0, rootdir|length - (appname|length) - 1)%}
@@ -246,15 +253,16 @@
                     });
                 });
                 $("#adminpanelgenerateentity").click(function () {
+                    var entitybundle = $("#entitybundle").val();
                     var entityfile = $("#entityfile").val();
-                    var domanda = "Vuoi creare i fle di configurazione per le entità partendo dal file: " + entityfile;
+                    var domanda = "Vuoi creare le entità nel bundle: " + entitybundle + " partendo dal file: " + entityfile;
                     conferma(domanda).then(function (answer) {
                         if ((String(answer) == "true")) {
                             $("#risultato").hide();
                             $("#risultato").html("");
                             $.ajax({
                                 url: "{{ path("fi_pannello_amministrazione_generateentity") }}",
-                                data: {file: entityfile},
+                                data: {bundle: entitybundle, file: entityfile},
                                 context: document.body
                             }).done(function (data) {
                                 $("#risultato").html(data);
@@ -273,14 +281,15 @@
                     });
                 });
                 $("#adminpanelgenerateclassentity").click(function () {
-                    var domanda = "Vuoi creare le classi per le entità";
+                    var entitybundle = $("#entitybundle").val();
+                    var domanda = "Vuoi creare le classi per le entità del bundle: " + entitybundle;
                     conferma(domanda).then(function (answer) {
                         if ((String(answer) == "true")) {
                             $("#risultato").hide();
                             $("#risultato").html("");
                             $.ajax({
                                 url: "{{ path("fi_pannello_amministrazione_generateentityclass") }}",
-                                //data: {bundle: entitybundle},
+                                data: {bundle: entitybundle},
                                 context: document.body
                             }).done(function (data) {
                                 $("#risultato").html(data);
@@ -355,14 +364,15 @@
                 });
                 $("#adminpanelgenerateformcrud").click(function () {
                     var entityform = $("#entityform").val();
-                    var domanda = "Vuoi creare il crud per il form " + entityform;
+                    var bundlename = $("#bundlename").val();
+                    var domanda = "Vuoi creare il crud per il form " + entityform + " nel bundle: " + bundlename;
                     conferma(domanda).then(function (answer) {
                         if ((String(answer) == "true")) {
                             $("#risultato").hide();
                             $("#risultato").html("");
                             $.ajax({
                                 url: "{{ path("fi_pannello_amministrazione_generateformcrud") }}",
-                                data: {entityform: entityform},
+                                data: {entityform: entityform, bundlename: bundlename},
                                 context: document.body
                             }).done(function (data) {
                                 $("#risultato").html(data);
