--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -7,18 +7,16 @@
             {% if error %}
                 <div class="loginerror">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
-            <h1>Login to Your Account</h1><br>
+            <h1>Entra nel servizio</h1><br>
             <form>
                 <label for="username">{{ 'security.login.username'|trans }}</label>
                 <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
                 <label for="password">{{ 'security.login.password'|trans }}</label>
                 <input type="password" id="password" name="_password" required="required" />
-                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
                 <input type="submit" class="login login-submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
             </form>
             <div class="login-help">
-                <a href="{{ path('fos_user_registration_register') }}">Register</a> - <a href="{{ path('fos_user_resetting_request') }}">Forgot Password</a>
+                <a href="{{ path('fos_user_resetting_request') }}">Password dimenticata?</a>
             </div>
         </div>
 
