try upgrade symfony 4.4

--- a/src/Fi/CoreBundle/Resources/views/OpzioniTabella/edit.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/OpzioniTabella/edit.html.twig
@@ -1,4 +1,4 @@
-{% include 'FiCoreBundle:Standard:edit.html.twig' %}
+{% include '@FiCore/Standard/edit.html.twig' %}
 
 <script type="text/javascript">
 
