--- a/src/Fi/CoreBundle/Resources/views/OpzioniTabella/new.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/OpzioniTabella/new.html.twig
@@ -1,4 +1,4 @@
-{% include 'FiCoreBundle:Standard:new.html.twig' %}
+{% include '@FiCore/Standard/new.html.twig' %}
 
 <script type="text/javascript">
 
