--- a/src/Fi/CoreBundle/Resources/views/Standard/edit.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Standard/edit.html.twig
@@ -10,7 +10,7 @@
     {% endif  %}
 
     {% set vars = {'form': edit_form,"tipo":"edit"} %}
-    {% include 'FiCoreBundle:Standard:form.html.twig' with vars %}
+    {% include '@FiCore/Standard/form.html.twig' with vars %}
 
     <div id="bottoni" class="acapo" style="padding-top: 1em">
         <p>
