--- a/src/Fi/CoreBundle/Resources/views/Standard/form_div_layout.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Standard/form_div_layout.html.twig
@@ -1,6 +1,6 @@
 {% block form_errors %}
     {% spaceless %}
-        {% import "FiCoreBundle:Standard:form.html.twig" as macros %}
+        {% import "@FiCore/Standard/form.html.twig" as macros %}
         {% if not form.parent and not form.vars.valid %}
             {% import _self as forms %}
             <div class="alert alert-block alert-error">
